--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,3 +7,8 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   background: #ffffff;
 }
+@media screen and (min-width: 768px) {
+  .username-text {
+      display: block;
+  }
+}
