--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,14 +1,13 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  height: 5vh;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  background: #ffffff;
+  background-image: linear-gradient(to right,
+    hsl(64, 76%, 60%),
+    #198754,
+    #0dcaf0
+  ) !important;
 }
 @media screen and (min-width: 768px) {
   .username-text {
-      display: block;
+    display: block;
   }
 }
+
