--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,11 @@
     #0dcaf0
   ) !important;
 }
+.contabar{
+  display:flex;
+  float:right;
+  color:hsl(0, 0%, 100%) !important;
+}
 @media screen and (min-width: 768px) {
   .username-text {
     display: block;
