--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,12 +5,13 @@
     #198754,
     #0dcaf0
   ) !important; */
-  background-color: rgb(36, 231, 205) !important;
+  background-color: rgba(0, 10, 9, 0.986) !important;
 
 }
 header{
   position: sticky;
   top: 0;
+  z-index:999;
 }
 .nav-items {
   justify-content: flex-end;
@@ -29,4 +30,7 @@ header{
 .carousel-item{
   top:0;
   bottom: auto;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg fill='%23FFFFFF' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 50 50' width='50px' height='50px'%3E%3Cpath d='M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z'/%3E%3C/svg%3E");
 }
