--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -19,6 +19,14 @@ header {
 
 .nav-items > .nav-item {
   color: white;
+  position: relative;
+}
+.nav-items > .nav-item > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .nav-item:hover {
   /* transform: scale(1.1); */
