--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -31,8 +31,13 @@ header {
 .nav-item:hover {
   /* transform: scale(1.1); */
   transform: translateX(2px);
-  transition: 0.3s;
+  /* transition: 0.3s; */
+  color:rgb(153, 145, 143); 
 }
+.nav-item:active{
+  color:rgb(173, 101, 83);
+}
+
 
 .homey {
   color: white;
@@ -51,8 +56,8 @@ header {
   box-shadow: none;
 }
 .navbar-nav .nav-link.active {
-  color: rgb(153, 145, 143);
+  color: rgb(153, 145, 143) !important;
 }
-.navbar-brand:hover{
+.navbar-brand:hover, .navbar-brand:focus{
   color:rgb(153, 145, 143);
 }
