home page design

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,3 +2,10 @@
   transform: translateX(10px);
   transition:  0.3s ease-out ;
 }
+.imgtag{
+ top:120px;
+  ;
+}
+body{
+  background-color: rgb(178, 240, 214);
+}
