--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,9 +2,8 @@
   transform: translateX(10px);
   transition:  0.3s ease-out ;
 }
-.imgtag{
- top:120px;
-  ;
+.imgtag > strong{
+bottom: 60px;
 }
 body{
   background-color: rgb(178, 240, 214);
