home page modification

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,10 +1,27 @@
 .know-more:hover {
-  transform: translateX(10px);
+  transform: translateX(15px);
   transition:  0.3s ease-out ;
+}
+.arrow-btn{
+  color: #646262;
+  width:35px;
+  height:35px;
 }
 .imgtag > strong{
 bottom: 60px;
 }
 body{
   background-color: rgb(178, 240, 214);
+
+}
+.img-text{
+  color:#646262;
+  font-size: 20px;
+  justify-content: center;
+}
+.row{
+  align-items: center;
+}
+.img-cap{
+  color:#646262;
 }
